# src/main/java/com/example/carleaseplatform/adapter/in/CarController.java
@@ -1,10 +1,10 @@
 package com.example.carleaseplatform.adapter.in;
 
 import com.example.carleaseplatform.adapter.in.mapper.CarMapper;
+import com.example.carleaseplatform.api.CarApi;
 import com.example.carleaseplatform.application.port.in.CarUsecase;
 import com.example.carleaseplatform.infrastructure.configuration.InboundAdapter;
 import com.example.carleaseplatform.model.CarApiModel;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -14,23 +14,27 @@ import java.util.List;
 @Slf4j
 @InboundAdapter
 @RestController
-@RequiredArgsConstructor
 @RequestMapping("/api/cars")
-public class CarController implements com.example.carleaseplatform.api.CarApi {
+public class CarController implements CarApi {
 
   private final CarUsecase carUsecase;
   private final CarMapper carMapper;
 
+  public CarController(CarUsecase carUsecase, CarMapper carMapper) {
+    this.carUsecase = carUsecase;
+    this.carMapper = carMapper;
+  }
+
   @Override
+  @PostMapping
   public ResponseEntity<CarApiModel> addCar(@RequestBody CarApiModel car) {
-    log.info("Adding a new car: {}", car);
     var savedCar = carUsecase.saveCar(carMapper.toDomain(car));
     return ResponseEntity.ok(carMapper.toApi(savedCar));
   }
 
   @Override
-  public ResponseEntity<Void> deleteCarById(@PathVariable Long id) {
-    log.info("Deleting car with ID: {}", id);
+  @DeleteMapping("/{id}")
+  public ResponseEntity<Void> deleteCarById(@PathVariable("id") Long id) {
     carUsecase.deleteCar(id);
     return ResponseEntity.noContent().build();
   }
@@ -38,7 +42,6 @@ public class CarController implements com.example.carleaseplatform.api.CarApi {
   @Override
   @GetMapping
   public ResponseEntity<List<CarApiModel>> getAllCars() {
-    log.info("Fetching all cars");
     var cars = carUsecase.getAllCars().stream()
         .map(carMapper::toApi)
         .toList();
@@ -46,8 +49,8 @@ public class CarController implements com.example.carleaseplatform.api.CarApi {
   }
 
   @Override
-  public ResponseEntity<CarApiModel> getCarById(@PathVariable Long id) {
-    log.info("Fetching car with ID: {}", id);
+  @GetMapping("/{id}")
+  public ResponseEntity<CarApiModel> getCarById(@PathVariable("id") Long id) {
     var car = carUsecase.getCarById(id);
     return ResponseEntity.ok(carMapper.toApi(car));
   }
