# src/main/java/com/example/carleaseplatform/adapter/in/LeaseController.java
@@ -2,11 +2,12 @@ package com.example.carleaseplatform.adapter.in;
 
 import com.example.carleaseplatform.application.port.in.LeaseRateUsecase;
 import com.example.carleaseplatform.infrastructure.configuration.InboundAdapter;
+import com.example.carleaseplatform.model.CalculateLeaseRateUsingCarIdRequest;
 import com.example.carleaseplatform.model.LeaseRateApiModel;
 import com.example.carleaseplatform.model.LeaseRateResponse;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -16,15 +17,19 @@ import javax.validation.Valid;
 @Slf4j
 @InboundAdapter
 @RestController
-@RequiredArgsConstructor
-@RequestMapping("/api/v1/lease")
+@RequestMapping("/api/lease")
 public class LeaseController implements com.example.carleaseplatform.api.CarLeaseApi {
 
   private final LeaseRateUsecase leaseRateUsecase;
 
+  public LeaseController(LeaseRateUsecase leaseRateUsecase) {
+    this.leaseRateUsecase = leaseRateUsecase;
+  }
+
+
   @Override
+  @PostMapping("/calculate")
   public ResponseEntity<LeaseRateResponse> calculateLeaseRate(@Valid @RequestBody LeaseRateApiModel leaseRateApiModel) {
-    log.info("Calculating lease rate with input: {}", leaseRateApiModel);
     Double calculatedRate = leaseRateUsecase.calculateLeaseRate(
         leaseRateApiModel.getMileage(),
         leaseRateApiModel.getDuration(),
@@ -33,8 +38,18 @@ public class LeaseController implements com.example.carleaseplatform.api.CarLeas
     );
     LeaseRateResponse response = new LeaseRateResponse().leaseRate(calculatedRate);
 
-    log.info("Calculated lease rate: {}", response.getLeaseRate());
-
     return ResponseEntity.ok(response);
   }
+
+  @Override
+  @PostMapping("/calculate-with-car-id")
+  public ResponseEntity<LeaseRateResponse> calculateLeaseRateUsingCarId(
+      @Valid @RequestBody CalculateLeaseRateUsingCarIdRequest request) {
+    Double calculatedRate = leaseRateUsecase.calculateLeaseRateWithCarId(
+        request.getLeaseRateRequest(), request.getCarId()
+    );
+    LeaseRateResponse response = new LeaseRateResponse().leaseRate(calculatedRate);
+    return ResponseEntity.ok(response);
+  }
+
 }
